# SudokuBreaker

./: .gitignore  CMakeLists.txt  README  README.md
include/: CFeld.h  CSudoku.h  Field.h  Sudoku.h  global.h  structs.h
src/: CFeld.cpp  CSudoku.cpp  Field.cpp  Sources.cmake  Sudoku.cpp  main.cpp
